# ukiki

./: LICENSE  README.md  genuki  pyproject.toml  ukiki  ukiki-ABANDONED.sh
src/: ukiki.py
