[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ukiki"
authors = [{name = "multiplealiases", email = "conflictvegetable@protonmail.com"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.9, <4.0"

[project.scripts]
ukiki = "ukiki:main"
